--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-05 13:33:10
+lastsearch = 2024-08-05 17:50:16
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = aDz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=aDz
+title = adz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=.adz
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOopUzmSllTrzb7J_acM2OKpnwC_L7V-e9rR_c3AHJ7BVkWGM7sLl
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [tuyensinh247.com]
 match = -220.0%%
