--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-05 16:58:34
+lastsearch = 2024-08-05 17:44:03
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.76356
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOor0WNXE5oNY8w1RKfOdalaCBG83dJW1NPxmj6M7mHPWCMB-PMS9
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOooBGF2Yrj2yCHGFcIHCy4gfey8reiLi5zQkHKV4W8iaIbR1gWIb
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
