--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-05 14:17:48
+lastsearch = 2024-08-05 17:44:44
 
 [shopee.vn]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = 8.7%%
-title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
-url = https://m.facebook.com/CHIEUNHUAHATRANG/
+match = -47.8%%
+title = Chiếu Nhựa Hà Hằng - Tổng Kho Chiếu Nhựa Cao Cấp ...
+url = https://m.facebook.com/61552187007911/
 
 [tiki.vn]
-match = -47.8%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384250
+match = -21.7%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384253
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai
 [www.lazada.vn]
 match = -34.8%%
 title = Chiếu Nhựa HOMIES Thái Bình Gập Đôi Nhựa Nguyên Sinh
-url = https://www.lazada.vn/products/chieu-nhua-homies-thai-binh-gap-doi-nhua-nguyen-sinh-nhieu-kich-thuoc-i1786455501.html?srsltid=AfmBOooSIxTVzwNe5eEo2LePoq5Wb39VxIZv8DtryzmoxXcXE5E1GRUs
+url = https://www.lazada.vn/products/chieu-nhua-homies-thai-binh-gap-doi-nhua-nguyen-sinh-nhieu-kich-thuoc-i1786455501.html
 
 [www.sendo.vn]
 match = -34.8%%
