--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-05 16:14:58
+lastsearch = 2024-08-05 17:48:33
 
 [everonvn.com.vn]
 match = -11.1%%
 title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831?srsltid=AfmBOoo-MqddL6UEdljZKSTVZ_kz7HjIA6lSgvS7jQlEvVRqq_9T70GE
 
 [www.lazada.vn]
 match = -133.3%%
 title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
-url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html?srsltid=AfmBOoo-4yTU0V3Nk4wtnMpphUW76YzDecB_9XKiQ_IntnUw7_8akI93
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,7 +34,7 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = -11.1%%
 title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html?srsltid=AfmBOooNWH_X_G468X2ny3pth8NzHB_OudojSVK_Ty52P5F5GEjJ86GT
 
 [www.everonqb.com]
 match = -111.1%%
@@ -42,8 +42,8 @@ title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
 
 [shopee.vn]
-match = -127.8%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+match = -116.7%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
