--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-05 04:49:44
+lastsearch = 2024-08-05 19:40:53
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,9 +52,9 @@ title = Ấn Độ quyết liệt yêu cầu Israel rút quân khỏi hành lang
 url = https://www.youtube.com/watch?v=ZIIAj-gLfDo
 
 [www.facebook.com]
-match = 41.7%%
-title = Chiếu Trúc Việt Nam | Hanoi
-url = https://www.facebook.com/chieutruc.vn/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/
 
 [chieutrucsaigon.com]
 match = 0.0%%
