--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-05 18:28:01
+lastsearch = 2024-08-05 19:39:30
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -7.7%%
-title = David Cohn - Subtext
-url = https://www.linkedin.com/in/davidjcohn
+match = -200.0%%
+title = Justin Chun - Irvine, California, United States
+url = https://www.linkedin.com/in/justin-chun-b9aa732b3
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -246.2%%
-title = Expert Profile: James Herman - UC Research Directory
-url = https://researchdirectory.uc.edu/p/hermanjs
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
