--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-08-05 18:39:27
+lastsearch = 2024-08-05 19:27:31
 
 [nemgiakho.com]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-cao-su-lien-a-classic-new-160x200x10cm.html
 [www.liena.com.vn]
 match = -25.9%%
 title = nệm cao su - thiên nhiên là gì? top những sản phẩm
-url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi
+url = https://www.liena.com.vn/nem-cao-su-thien-nhien-la-gi?srsltid=AfmBOoqY48hxsgy7F2KjOlZKL1vXzWBN81GGewmOQz_yzCgA8TGf6MgW
 
 [fefurniture.com.vn]
 match = 7.4%%
@@ -24,7 +24,7 @@ url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 [demxanh.com]
 match = -33.3%%
 title = Đệm cao su Liên Á L'ADOME chính hãng, bảo hành 12 năm
-url = https://demxanh.com/dem-cao-su-lien-a-l-a-dome.html
+url = https://demxanh.com/dem-cao-su-lien-a-l-a-dome.html?srsltid=AfmBOooG-aJIV0HQ2FzeIMGO_-iIKnOdhTL54wcw4UwFFRCVZjmt8Dr1
 
 [www.thegioinemvip.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-new-160x200x10cm-g
 [www.lazada.vn]
 match = -7.4%%
 title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
-url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
+url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html?srsltid=AfmBOoq9zUmQJ0WAzCg1Q0qG9eIvFrJCvvqFWsMgw0zwARrCC6wLjzJ3
 
 [tiki.vn]
 match = -11.1%%
