--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-05 18:44:46
+lastsearch = 2024-08-05 19:34:03
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = 69.2%%
+title = Đệm lò xo Everon Pocket Premium
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = 30.8%%
-title = Nệm lò xo Everon Pocket Premium - Nệm Hana
-url = https://nemhana.com/nem-lo-xo-everon-pocket-premium/
+match = -53.8%%
+title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
+url = https://nemhana.com/nem-everon/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -62,8 +62,8 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
