--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-05 18:24:47
+lastsearch = 2024-08-05 19:36:03
 
 [www.instagram.com]
 match = -105.6%%
@@ -14,7 +14,7 @@ url = https://www.instagram.com/farmersmarketvietnam/p/C8LpJbxM717/
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOorlwFKo-yflXFoL1wDfVzoUWbRWMdpBq6BtDDj16oVn5I51TV01
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
 match = -11.1%%
@@ -39,7 +39,7 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoraCY4AOJyNA4U4veP8v6BMqJhvK7w6bKk8-vS9_iAb9f3zZ07f
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -11.1%%
