--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-05 22:17:13
+lastsearch = 2024-08-06 01:39:43
 
 [everon.online]
 match = -7.4%%
@@ -32,19 +32,19 @@ title = Bộ Chăn ga gối Everon EPM-21067
 url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = -18.5%%
+title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
+url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 0.0%%
+title = Bộ Everon Ept-21045
+url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21060
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
+title = Bộ chăn ga gối Everon EPM-21070
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
 
 [shopee.vn]
 match = -74.1%%
