--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-06 00:57:33
+lastsearch = 2024-08-06 01:37:59
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = 0.0%%
-title = Hans Lee, MD
-url = https://faculty.mdanderson.org/profiles/hans_lee.html
+match = -17.6%%
+title = Philip L. Lorenzi, Ph.D.
+url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -147.1%%
-title = Polymorphism of the COMT, MAO, DAT, NET and 5-HTT ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3924247/
+match = -211.8%%
+title = Ability to delay neuropathological events associated with ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2940273/
 
 [books.google.com]
 match = -7.7%%
@@ -310,4 +310,9 @@ url = https://sg.news.yahoo.com/kong-choy-acquitted-cheating-abdullah-badawi-pkf
 match = -29.4%%
 title = Joe Derisi | UCSF Profiles
 url = https://profiles.ucsf.edu/joe.derisi
+
+[link.aps.org]
+match = -152.9%%
+title = PRX Quantum 2, 010317 - Physical Review Link Manager
+url = https://link.aps.org/doi/10.1103/PRXQuantum.2.010317
 
