--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-05 23:19:40
+lastsearch = 2024-08-06 01:48:04
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = 30.4%%
 title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html?srsltid=AfmBOopofkIRulu0Zw-aMhUysq07tb4UatGaGFVaA9PaAZtojr8WAy5D
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopJStZACeYM2LoGD8Nq7Hte153oGpOtMydeqAxPgdOe1kQ8mtsh
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
