--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-05 21:50:12
+lastsearch = 2024-08-06 01:43:56
 
 [helloviettravel.com]
 match = -187.5%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = 12.5%%
-title = Bản tin Du lịch 18/7/2024
-url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
+match = -143.8%%
+title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
+url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
