--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-05 22:30:07
+lastsearch = 2024-08-06 01:41:50
 
 [www.diepxuan.com]
-match = 51.6%%
-title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
+match = 38.7%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [shopee.vn]
-match = 29.0%%
-title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
-url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
+match = 32.3%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
 
 [m.facebook.com]
 match = 19.4%%
@@ -39,7 +39,7 @@ url = https://sxd.bacgiang.gov.vn/documents/21455/5519781/1550589716143_Cong bo 
 [tiki.vn]
 match = 48.4%%
 title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chieu-nhua-thai-binh-ben-dep-du-co-1m6-x-2ml-p182155456.html?spid=182155476
+url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p160055664.html?spid=160055719
 
 [pdfcoffee.com]
 match = 9.7%%
