--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-08-05 23:29:52
+lastsearch = 2024-08-06 01:52:18
 
 [sieuthidemonline.vn]
-match = -66.7%%
-title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
+match = -19.0%%
+title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
+url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood - thương hiệu Tuấn Anh hàng đầu.
 url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 
 [demxanh.com]
-match = -81.0%%
-title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
-url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
+match = -23.8%%
+title = Đại lý bán đệm lò xo Tuấn Anh Bắc Giang
+url = https://demxanh.com/da-i-ly-ba-n-dem-lo-xo-tua-n-anh-bac-giang.html
 
 [www.diepxuan.com]
 match = 4.8%%
