--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-06 00:41:09
+lastsearch = 2024-08-06 01:39:22
 
 [www.lazada.vn]
 match = -27.8%%
@@ -47,14 +47,14 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
-match = -100.0%%
-title = Vỏ gối nằm 50 x 70 vải tencel mềm mịn - Tonybed
-url = https://tonybed.vn/san-pham/vo-goi-nam-50-x-70-vai-tencel-mem-min/
+match = 22.2%%
+title = Vỏ gối 50x70 - Tonybed
+url = https://tonybed.vn/vo-goi/vo-goi-nam/vo-goi-50x70/
 
 [www.photonix.cn]
 match = -155.6%%
